--- a/ui/chat_key_input.ui
+++ b/ui/chat_key_input.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>795</width>
-    <height>415</height>
+    <height>210</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,74 +16,52 @@
   <widget class="QLabel" name="guide_img">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>20</x>
      <y>10</y>
-     <width>381</width>
-     <height>391</height>
+     <width>231</width>
+     <height>191</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>../chat_key/guide.png</pixmap>
-   </property>
-  </widget>
-  <widget class="QLabel" name="guide_txt">
-   <property name="geometry">
-    <rect>
-     <x>410</x>
-     <y>10</y>
-     <width>321</width>
-     <height>101</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>배달의민족 도현</family>
-     <pointsize>10</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="textFormat">
-    <enum>Qt::PlainText</enum>
-   </property>
-   <property name="pixmap">
-    <pixmap>../chat_key/guide_text.png</pixmap>
+    <pixmap>../icon/guide_img.png</pixmap>
    </property>
   </widget>
   <widget class="QTextEdit" name="key_input">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>120</y>
+     <x>350</x>
+     <y>140</y>
      <width>171</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Arial</family>
-     <pointsize>10</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
+     <pointsize>14</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
     </font>
+   </property>
+   <property name="contextMenuPolicy">
+    <enum>Qt::DefaultContextMenu</enum>
    </property>
    <property name="html">
     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Arial'; font-size:10pt; font-weight:600; font-style:normal;&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Arial'; font-size:14pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QPushButton" name="connect_btn">
    <property name="geometry">
     <rect>
-     <x>650</x>
-     <y>110</y>
+     <x>640</x>
+     <y>130</y>
      <width>61</width>
      <height>61</height>
     </rect>
@@ -105,8 +83,8 @@ p, li { white-space: pre-wrap; }
   <widget class="QPushButton" name="exit_btn">
    <property name="geometry">
     <rect>
-     <x>730</x>
-     <y>110</y>
+     <x>720</x>
+     <y>130</y>
      <width>51</width>
      <height>61</height>
     </rect>
@@ -128,16 +106,16 @@ p, li { white-space: pre-wrap; }
   <widget class="QLabel" name="code_key_lbl">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>110</y>
-     <width>81</width>
+     <x>260</x>
+     <y>130</y>
+     <width>91</width>
      <height>51</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Arial</family>
-     <pointsize>12</pointsize>
+     <pointsize>16</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -147,6 +125,51 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="err_lbl">
+   <property name="geometry">
+    <rect>
+     <x>620</x>
+     <y>20</y>
+     <width>171</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="guide_lbl">
+   <property name="geometry">
+    <rect>
+     <x>260</x>
+     <y>10</y>
+     <width>361</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>16</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>코드키 확인법
+1. 애플리케이션 실행
+2. 실시간 통역 → 키보드선택
+3. 우측 화면 위 열쇠모양 아이콘 클릭</string>
    </property>
   </widget>
  </widget>
